add agent metadata